# Manga2Anime

./: .env.example  .gitignore  LICENSE  README.md  SYSTEM_FLOW.md  app.py  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
manga2anime/: __init__.py  audio.py  config.py  dialogue.py  director.py  frame_generation.py  loader.py  models.py  openai_utils.py  preprocess.py  studio.py  style.py  subtitles.py  video.py
process/context/: all-context.md
process/context/planning/: all-planning.md
process/context/tests/: all-tests.md
process/features/direct-anime/: _GUIDE.md
process/features/direct-anime/active/manga2anime-studio-flow_27-06-26/: manga2anime-studio-flow_PLAN_27-06-26.md  manga2anime-studio-flow_SPEC_27-06-26.md
src/: main.tsx  styles.css  vite-env.d.ts
